--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:id="@+id/textView7"
+            android:id="@+id/textViewNome"
             android:textSize="30sp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="17dp"
-            android:id="@+id/textView104"
+            android:id="@+id/textView4"
             android:textSize="18sp"
             android:layout_below="@+id/textView103"
             android:layout_alignRight="@+id/editText5"
@@ -57,9 +57,9 @@
             android:text="Preço"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView7"
+            android:id="@+id/textViewNome"
             android:textSize="20sp"
-            android:layout_below="@+id/textView105"
+            android:layout_below="@+id/textView5"
             android:layout_alignRight="@+id/floatingActionButton8"
             android:layout_alignEnd="@+id/floatingActionButton8"
             android:layout_marginTop="46dp" />
@@ -68,10 +68,10 @@
             android:text="Tag_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView105"
+            android:id="@+id/textView5"
             android:textSize="20sp"
             android:layout_marginTop="11dp"
-            android:layout_below="@+id/textView104"
+            android:layout_below="@+id/textView4"
             android:layout_alignRight="@+id/floatingActionButton7"
             android:layout_alignEnd="@+id/floatingActionButton7"
             android:layout_alignParentLeft="true"
@@ -136,7 +136,7 @@
             android:tint="@android:color/background_light"
 
             android:layout_marginTop="33dp"
-            android:layout_below="@+id/textView7"
+            android:layout_below="@+id/textViewNome"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
