--- a/app/src/main/res/layout/activity_editar_aula.xml
+++ b/app/src/main/res/layout/activity_editar_aula.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:id="@+id/textView7"
+            android:id="@+id/textViewNome"
             android:textSize="30sp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
