--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -57,7 +57,7 @@
             android:text="Preço"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewNome"
+            android:id="@+id/textView8"
             android:textSize="20sp"
             android:layout_below="@+id/textView5"
             android:layout_alignRight="@+id/floatingActionButton8"
@@ -119,11 +119,12 @@
             app:srcCompat="@android:drawable/ic_menu_edit"
             android:id="@+id/floatingActionButton8"
             android:tint="@android:color/background_light"
-
+            android:onClick="editarAula"
             app:backgroundTint="#7bc8f3"
-            android:layout_alignTop="@+id/floatingActionButton7"
+            android:layout_below="@+id/textView8"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="30dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
@@ -135,8 +136,8 @@
             app:backgroundTint="#7bc8f3"
             android:tint="@android:color/background_light"
 
-            android:layout_marginTop="33dp"
-            android:layout_below="@+id/textViewNome"
+
+            android:layout_alignTop="@+id/floatingActionButton8"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
