--- a/app/src/main/res/layout/activity_editar_aula.xml
+++ b/app/src/main/res/layout/activity_editar_aula.xml
@@ -36,12 +36,11 @@
             android:background="#7bc8f3"
             android:layout_below="@+id/editText11"
             android:textColor="@android:color/background_light"
-            android:onClick="cadastrarAulaTutor"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            />
+            android:onClick="editarAula (AulaProfessorActivity)" />
 
         <EditText
             android:layout_width="match_parent"
