--- a/app/src/main/res/layout/activity_editar_aula.xml
+++ b/app/src/main/res/layout/activity_editar_aula.xml
@@ -10,7 +10,7 @@
         android:id="@+id/activity_interesses"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".aula.gui.CadastrarAulaTutorActivity">
+        tools:context=".aula.gui.EditarAulaActivity">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
