--- a/app/src/main/res/layout/activity_editar_aula.xml
+++ b/app/src/main/res/layout/activity_editar_aula.xml
@@ -40,7 +40,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:onClick="editarAula (AulaProfessorActivity)" />
+            android:onClick="cadastrarAulaTutor" />
 
         <EditText
             android:layout_width="match_parent"
