--- a/app/src/main/res/layout/activity_alunos_cadastrados.xml
+++ b/app/src/main/res/layout/activity_alunos_cadastrados.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ufrpe.edu.learnit.aula.gui.AulasCompradasActivity">
+    tools:context="ufrpe.edu.learnit.aula.gui.AlunosCadastradosActivity">
 
 
     <android.support.v7.widget.Toolbar
@@ -22,14 +22,14 @@
         android:fillViewport="true">
         <RelativeLayout
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/activity_aulas_compradas"
+            android:id="@+id/activity_alunos_cadastrados"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            tools:context="ufrpe.edu.learnit.aula.gui.AulasCompradasActivity"
+            tools:context="ufrpe.edu.learnit.aula.gui.AlunosCadastradosActivity"
             tools:ignore="ScrollViewSize">
 
 
