--- a/app/src/main/res/layout/activity_cadastrar_aula.xml
+++ b/app/src/main/res/layout/activity_cadastrar_aula.xml
@@ -29,21 +29,6 @@
             android:layout_centerHorizontal="true"
             android:textColor="@android:color/background_light" />
 
-        <Button
-            android:text="cadastrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button5"
-            android:background="#7bc8f3"
-            android:layout_below="@+id/editText11"
-            android:textColor="@android:color/background_light"
-            android:onClick="cadastrarAulaTutor"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            />
-
         <EditText
             android:layout_width="match_parent"
             android:hint="Digite aqui as descrições da sua aula"
@@ -76,17 +61,6 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editText11"
-            android:hint="Preço por hora/aula"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/spinner2"
-            android:layout_alignParentStart="true" />
-
         <TextView
             android:text="Tags de aula"
             android:layout_width="wrap_content"
@@ -95,25 +69,69 @@
             android:layout_height="20dp"
             android:layout_below="@+id/editTextHotasAssistidas"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="20dp" />
 
-        <Spinner
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/spinner2"
-            android:layout_marginBottom="29dp"
-            android:layout_below="@+id/spinner"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_above="@+id/editText11"
+            android:layout_below="@+id/editTextTag"
+            android:id="@+id/ListViewTags" />
 
-        <Spinner
-            android:layout_width="match_parent"
+        <AutoCompleteTextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner"
-            android:layout_marginBottom="12dp"
+            android:ems="10"
+            android:id="@+id/editTextTag"
+            android:layout_marginTop="12dp"
             android:layout_below="@+id/textView3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:hint="Tag"
+            />
+
+        <Button
+            android:text="Add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ButtonAddTag"
+            android:background="#7bc8f3"
+            android:textColor="@android:color/background_light"
+            android:layout_alignTop="@+id/editTextTag"
+            android:layout_toRightOf="@+id/editTextHotasAssistidas"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
+            android:onClick="populateListView"
+            android:layout_above="@+id/ListViewTags" />
+
+        <Button
+            android:text="cadastrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button5"
+            android:background="#7bc8f3"
+            android:textColor="@android:color/background_light"
+            android:onClick="cadastrarAulaTutor"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText11"
+            android:hint="@string/pre_o_por_hora_aula"
+            android:layout_marginBottom="17dp"
+            android:layout_above="@+id/button5"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
     </ScrollView>
