--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -30,19 +30,6 @@
 
 
         <TextView
-            android:text="Tag_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="17dp"
-            android:id="@+id/textViewTags"
-            android:textSize="18sp"
-            android:layout_below="@+id/textView103"
-            android:layout_alignRight="@+id/editText5"
-            android:layout_alignEnd="@+id/editText5"
-            android:layout_marginRight="21dp"
-            android:layout_marginEnd="21dp" />
-
-        <TextView
             android:text="Tags de aula"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,17 +39,6 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="34dp" />
-
-        <TextView
-            android:text="Preço"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView8"
-            android:textSize="20sp"
-            android:layout_below="@+id/textView5"
-            android:layout_alignRight="@+id/floatingActionButton8"
-            android:layout_alignEnd="@+id/floatingActionButton8"
-            android:layout_marginTop="46dp" />
 
         <TextView
             android:text="Horas de aula fornecidas"
@@ -86,6 +62,44 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/botaoMostrarAlunos"
+            android:onClick="mostrarAlunos"
+            app:backgroundTint="#7bc8f3"
+            android:tint="@android:color/background_light"
+            android:text="Mostrar alunos desta aula"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:id="@+id/floatingActionButton7"
+            app:backgroundTint="#7bc8f3"
+            android:tint="@android:color/background_light"
+            android:onClick="confirmarAula"
+            android:text="Confirmar horas"
+            android:layout_above="@+id/botaoMostrarAlunos"
+            android:layout_toRightOf="@+id/textView101"
+            android:layout_toEndOf="@+id/textView101"
+            android:layout_marginLeft="42dp"
+            android:layout_marginStart="42dp" />
+
+        <TextView
+            android:text="Preço"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView8"
+            android:textSize="20sp"
+            android:layout_marginTop="17dp"
+            android:layout_below="@+id/toolbar"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
         <TextView
             android:text="Nome da aula"
             android:layout_width="wrap_content"
@@ -93,8 +107,8 @@
             android:id="@+id/textView100"
             android:textSize="20sp"
 
-            android:layout_marginTop="46dp"
-            android:layout_below="@+id/toolbar"
+            android:layout_marginTop="21dp"
+            android:layout_below="@+id/textView8"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -108,35 +122,11 @@
             android:tint="@android:color/background_light"
             android:onClick="editarAula"
             app:backgroundTint="#7bc8f3"
-            android:layout_below="@+id/textView8"
+            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_above="@+id/botaoMostrarAlunos"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="30dp" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:id="@+id/floatingActionButton7"
-            app:backgroundTint="#7bc8f3"
-            android:tint="@android:color/background_light"
-            android:onClick="confirmarAula"
-            android:layout_alignTop="@+id/floatingActionButton8"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:text="Confirmar horas" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/botaoMostrarAlunos"
-            android:onClick="mostrarAlunos"
-            app:backgroundTint="#7bc8f3"
-            android:tint="@android:color/background_light"
-            android:text="Mostrar alunos desta aula"/>
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 </ScrollView>
