Adicionadas as listViews das tags aula_professor cadastrar_aula cadastro_perfil editar_aula editar_perfil perfil perfil_alheio

--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -29,16 +29,7 @@
             android:layout_centerHorizontal="true" />
 
 
-        <TextView
-            android:text="Tags de aula"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView103"
-            android:textSize="20sp"
-            android:layout_below="@+id/textView101"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="34dp" />
+
 
         <TextView
             android:text="Horas de aula fornecidas"
@@ -74,21 +65,6 @@
             android:tint="@android:color/background_light"
             android:text="Mostrar alunos desta aula"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:id="@+id/floatingActionButton7"
-            app:backgroundTint="#7bc8f3"
-            android:tint="@android:color/background_light"
-            android:onClick="confirmarAula"
-            android:text="Confirmar horas"
-            android:layout_above="@+id/botaoMostrarAlunos"
-            android:layout_toRightOf="@+id/textView101"
-            android:layout_toEndOf="@+id/textView101"
-            android:layout_marginLeft="42dp"
-            android:layout_marginStart="42dp" />
-
         <TextView
             android:text="Preço"
             android:layout_width="wrap_content"
@@ -112,6 +88,39 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <TextView
+            android:text="Tags da Aula"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewTags"
+            android:textSize="20sp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/textViewNome"
+            android:layout_toStartOf="@+id/textViewNome" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ListViewTags"
+            android:layout_below="@+id/textViewTags"
+            android:layout_alignLeft="@+id/textViewTags"
+            android:layout_alignStart="@+id/textViewTags"
+            android:layout_marginTop="13dp"
+            android:layout_above="@+id/floatingActionButton8" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:id="@+id/floatingActionButton7"
+            app:backgroundTint="#7bc8f3"
+            android:tint="@android:color/background_light"
+            android:onClick="confirmarAula"
+            android:text="Confirmar horas"
+            android:layout_below="@+id/ListViewTags"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -122,11 +131,10 @@
             android:tint="@android:color/background_light"
             android:onClick="editarAula"
             app:backgroundTint="#7bc8f3"
-            android:layout_marginLeft="12dp"
-            android:layout_marginStart="12dp"
+            android:layout_marginBottom="17dp"
             android:layout_above="@+id/botaoMostrarAlunos"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignLeft="@+id/ListViewTags"
+            android:layout_alignStart="@+id/ListViewTags" />
 
     </RelativeLayout>
 </ScrollView>
